# Titanic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
Agent/: CMakeLists.txt
Agent/src/: main.cpp
Agent/src/interface/: TcpClient.cpp  TcpClient.h
Daemon/: CMakeLists.txt
Daemon/src/: main.cpp
Daemon/src/artefact/: Artefact.cpp  Artefact.h  Directory.cpp  Directory.h  File.cpp  File.h  Node.cpp  Node.h
Daemon/src/exception/: Exception.cpp  Exception.h  InsufficientPrivileges.hpp  InvalidInput.hpp  NotFound.hpp
Daemon/src/interface/: TcpServer.cpp  TcpServer.h
Daemon/src/parser/: Parser.cpp  Parser.h
Daemon/src/scanner/: Scanner.cpp  Scanner.h
Daemon/src/util/: Logger.cpp  Logger.h  LoggerMacros.hpp
src/: main.cpp
src/Scanner/: FileInfo.cpp  FileInfo.h
src/artefact/: Artefact.cpp  Directory.cpp  Directory.h
src/scanner/: FileInfo.cpp  FileInfo.h  Scanner.cpp  Scanner.h
